# goit-pycore-hw-04

./: README.md  pyproject.toml  task1.txt  task2.txt
task1/: __init__.py  __main__.py
task2/: __init__.py  __main__.py
tests/task1/: test_task1.py
tests/task2/: test_task2.py
