[tool.poetry]
name = "goit-pycore-hw-04"
version = "0.1.0"
description = ""
authors = ["gvsheva <3405066+gvsheva@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "task1" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
